# time_duration_cli

./: .gitignore  README.md  pyproject.toml  requirements.txt  tempCodeRunnerFile.python  tests.py  time_duration.py
tests/: tests.py
time_calc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
timediff/: __main__.py
